--- a/public/index.html
+++ b/public/index.html
@@ -33,8 +33,6 @@
         .rationale-list li { display: flex; gap: 8px; margin-bottom: 8px; color: #374151; line-height: 1.6; }
         .bullet { color: #3b82f6; font-weight: bold; }
         .hidden { display: none; }
-        .api-key-notice { background: #fef3c7; border: 1px solid #fbbf24; border-radius: 6px; padding: 12px; margin-bottom: 24px; font-size: 14px; color: #92400e; }
-        .api-key-input { margin-top: 8px; }
     </style>
 </head>
 <body>
@@ -42,12 +40,6 @@
         <div class="header">
             <span class="emoji">🧠</span>
             <h1>Decision Unblocker</h1>
-        </div>
-
-        <div class="api-key-notice">
-            <strong>⚙️ Setup Required:</strong> Enter your Anthropic API key below (it stays in your browser only)
-            <input type="password" id="apiKey" class="api-key-input" placeholder="sk-ant-api03-..." style="width: 100%; padding: 8px; margin-top: 8px; border: 1px solid #d1d5db; border-radius: 4px;">
-            <small style="display: block; margin-top: 4px;">Get your free API key at: <a href="https://console.anthropic.com" target="_blank">console.anthropic.com</a></small>
         </div>
 
         <form id="decisionForm">
@@ -120,12 +112,6 @@
         form.addEventListener('submit', async (e) => {
             e.preventDefault();
 
-            const apiKey = document.getElementById('apiKey').value.trim();
-            if (!apiKey) {
-                alert('Please enter your Anthropic API key first!');
-                return;
-            }
-
             const decision = document.getElementById('decision').value;
             const inaction = document.getElementById('inaction').value;
             const reversible = document.getElementById('reversible').value;
@@ -135,57 +121,27 @@
             submitBtn.textContent = 'Analyzing...';
             resultDiv.classList.add('hidden');
 
-            const prompt = `You are a decision-making advisor. Analyze this decision and provide a recommendation.
-
-Decision: ${decision}
-
-Context:
-- If I do nothing for 30 days: ${inaction || 'Not specified'}
-- Is this decision reversible?: ${reversible || 'Not specified'}
-- What scares me more?: ${fear || 'Not specified'}
-
-Provide your response EXACTLY as JSON with no markdown or code blocks:
-{
-  "recommendation": "YES" or "NO",
-  "rationale": ["Point 1 in one concise sentence", "Point 2 in one concise sentence", "Point 3 in one concise sentence"],
-  "confidence": 85
-}
-
-CRITICAL: Return ONLY the JSON object, no explanatory text, no markdown formatting, no code blocks.`;
-
             try {
-                const response = await fetch('https://api.anthropic.com/v1/messages', {
+                const response = await fetch('/api/analyze', {
                     method: 'POST',
-                    headers: {
-                        'Content-Type': 'application/json',
-                        'x-api-key': apiKey,
-                        'anthropic-version': '2023-06-01'
-                    },
-                    body: JSON.stringify({
-                        model: 'claude-sonnet-4-20250514',
-                        max_tokens: 1000,
-                        messages: [{ role: 'user', content: prompt }]
-                    })
+                    headers: { 'Content-Type': 'application/json' },
+                    body: JSON.stringify({ decision, inaction, reversible, fear })
                 });
 
                 if (!response.ok) {
-                    const errorText = await response.text();
-                    throw new Error(`API Error: ${response.status} - ${errorText}`);
+                    throw new Error('Server error');
                 }
 
                 const data = await response.json();
-                const text = data.content[0].text;
-                const cleanText = text.replace(/```json|```/g, '').trim();
-                const result = JSON.parse(cleanText);
 
-                document.getElementById('recommendation').textContent = result.recommendation;
+                document.getElementById('recommendation').textContent = data.recommendation;
                 document.getElementById('recommendation').className = 
-                    'recommendation ' + (result.recommendation === 'YES' ? 'yes' : 'no');
-                document.getElementById('confidence').textContent = result.confidence + '%';
+                    'recommendation ' + (data.recommendation === 'YES' ? 'yes' : 'no');
+                document.getElementById('confidence').textContent = data.confidence + '%';
 
                 const rationaleList = document.getElementById('rationaleList');
                 rationaleList.innerHTML = '';
-                result.rationale.forEach(point => {
+                data.rationale.forEach(point => {
                     const li = document.createElement('li');
                     li.innerHTML = `<span class="bullet">•</span><span>${point}</span>`;
                     rationaleList.appendChild(li);
@@ -194,22 +150,10 @@ CRITICAL: Return ONLY the JSON object, no explanatory text, no markdown formatti
                 resultDiv.classList.remove('hidden');
             } catch (error) {
                 alert('Error: ' + error.message);
-                console.error('Full error:', error);
             } finally {
                 submitBtn.disabled = false;
                 submitBtn.textContent = 'Unblock Me';
             }
-        });
-
-        // Load saved API key from localStorage if available
-        const savedKey = localStorage.getItem('anthropicApiKey');
-        if (savedKey) {
-            document.getElementById('apiKey').value = savedKey;
-        }
-
-        // Save API key when it changes
-        document.getElementById('apiKey').addEventListener('change', (e) => {
-            localStorage.setItem('anthropicApiKey', e.target.value);
         });
     </script>
 </body>
